# ssg-greenbank-gbt100m

./: .gitignore  Makefile  Makefile.md  README.md  Recipes.mak  pyproject.toml
chatgpt/: README.md  _quarto.yml  analysis01.html  analysis01.qmd  test01.qmd  workflow.html  workflow.qmd  workflow2.qmd
data/videos/: Makefile
docker/: Dockerfile.colmap  Dockerfile.gsplat  Dockerfile.gsplat2  Dockerfile.openmvg  Dockerfile.openmvs  docker-compose.yml
docs/: 0_clean.ply  analysis01.html  catalog.html  index.html  minimal.html  ply_viewer.html  ply_viewer2.html  projects.html  test.html  videos.html
docs/data/: DJI_0145-jpg_base_1.60_1600-0.ply  DJI_0145-png_base_1.60_1600-0.ply  DJI_0145-png_base_1.60_1600-0_clean.ply
docs/gsp/: DJI_0145-png_1.00_1600_none-0-point_cloud.html  DJI_0145-png_1.00_1600_none-0_filter1-point_cloud.html  DJI_0145-png_1.00_1600_none-0_filter2-point_cloud.html  DJI_0145-png_1.00_3200_none.html  DJI_0145-png_2.00_3200_none.html  DJI_0146-png_1.00_1600_none-0-point_cloud.html  DJI_0146-png_1.00_1600_none-0_filter1-point_cloud.html  (+10 more)
projects/: README.md
recipes/: Recipes-cfuse.mak  Recipes-colmap.mak  Recipes-gsplat.mak  Recipes-images.mak  Recipes-openmvs.mak  Recipes.mak
reports/: _quarto.yml  _splat_template.qmd  analysis01.xlsx  colmap_tuning.html  colmap_tuning.qmd  colmap_tuning_1.html  index.qmd  ply_viewer.qmd  test.qmd  utils.py  videos.qmd
scripts/: cli.py  colmap_pipeline.py  extract_frames.py  gsplat_pipeline.py  mask_generator.py  openmvg_pipeline.py  openmvs_pipeline.py  report_utils.py  utils.py
videos/: README.md
(+54 files in other folders)
