[project]
name = "ssg-greenbank-gbt100m"
version = "0.1.0"
description = ""
authors = [
    {name = "John Leonard",email = "jdleonard@vcu.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
